fix: add className to fix style overlap

--- a/codeverse/src/components/ShowProductsMobile/styles.module.scss
+++ b/codeverse/src/components/ShowProductsMobile/styles.module.scss
@@ -4,7 +4,7 @@
     gap: 8px;
     padding: 0 16px;
 
-    span {
+    .span {
         color: var(--TypeLowEmphasis);
         font-size: 14px;
         font-weight: 600;
